--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </p>
           </div>
                 
-               <div class="images"><img src="images/Professional Jury/KathleenDickhutProJury.jpg" />
+               <div class="images"><img src="images/Professional Jury/ChrisHumeProJury.jpg" />
                <p><strong>Christopher Hume</strong><br />
                 Toronto Star<br />
                 Toronto, ON, Canada</p>
