--- a/selection.html
+++ b/selection.html
@@ -25,7 +25,8 @@
                 <li><a href="eligibility.html">Eligibility</a></li>
                 <li><a href="deadline.html">Deadline &amp; Entry Fees</a></li>
                 <li><a href="categories.html">Categories &amp; Guidelines</a></li>
-                <li><a href="https://www.conferenceabstracts.com/cfp2/LoginASLA.asp?EventKey=MPDHHRPD" target="_blank">Begin Your Submission</a></li>
+                <li><a href="https://www.conferenceabstracts.com/cfp2/LoginASLA.asp?EventKey=QIOHPGSH&UserEmail=&UserPassword=&User=&memberID=
+ " target="_blank">Begin Your Submission</a></li>
                 <li><a href="selection.html">Selection &amp; Announcements</a>
                   </li>
                 <li><a href="strategies.html">Winning Strategies</a></li>
@@ -34,8 +35,8 @@
           
             
             </div>
-            <div class="banners"><a href="http://www.asla.org/aslafund"><img src="images/ASLA_Fund_Logo.jpg" style="float:left;"/></a></div>
-            <div class="banners"><a href="http://www.landscapearchitecturemagazine.org/"><img src="images/LAM2011_LogoStackA100w.png" style="float:right; margin-right: 20px;"/></a></div>
+            <div class="banners"><a href="http://www.asla.org/aslafund"><img src="images/ASLA_Fund_Logo.jpg" style="float:left; margin-right: 20px;"/></a>
+            <a href="http://www.landscapearchitecturemagazine.org/"><img src="images/LAM2011_LogoStackA100w.png" style="float:left;"/></a></div>
           <div style="clear:both;"></div>
           <br />
           <p style="margin-left: 0px;">Sponsored by:</p>
