--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 
                <div class="images"><img src="images/Professional Jury/ChristopherHumeProJury.jpg" />
                <p><strong>Christopher Hume</strong><br />
-                Toronto Star<br />
+                <em>Toronto Star</em><br />
                 Toronto, ON, Canada</p>
                <p><br />
                </p>
@@ -182,13 +182,13 @@ Miami, FL</p>
           <div class="images"><img src="images/Student Jury/JanelleJohnsonStuJury.jpg" />
                  <p><strong>Jenelle Johnson, ASLA</strong><br />
                    Hoerr Schaudt Landscape Architects<br />
-                    Evanston, IL</p>
+                    Chicago, IL</p>
           </div>
 
 <div class="images"><img src="images/Student Jury/RogerLewisStuJury.jpg" />
   <p><strong>Roger Lewis, FAIA</strong><br />
              Peace Corps Commemorative Foundation<br />
-             Journalist, The Washington Post<br />
+             Journalist, <em>The Washington Post</em><br />
              Washington, D.C.</p>
            </div>
 
