--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   in many other design and construction industry and general interest media. Award recipients, their clients,<br />
   and advisors will be honored at the awards presentation ceremony during the ASLA Annual Meeting and EXPO<br />
   in New Orleans, October 21-24, 2016.</p>
-  <h2>NEW: Entry payments and submissions must be submitted online. <a href="https://www.conferenceabstracts.com/cfp2/LoginASLA.asp?EventKey=MPDHHRPD" target="_blank">Go to the Begin Your Submission</a> page to start the entry process. </h2>
+  <h2>NEW: Entry payments and submissions must be submitted online. <a href="https://www.conferenceabstracts.com/cfp2/LoginASLA.asp?EventKey=QIOHPGSH&UserEmail=&UserPassword=&User=&memberID=" target="_blank">Go to the Begin Your Submission</a> page to start the entry process. </h2>
 
 		<h2>The Juries</h2>
 		<p>The prestige of the ASLA awards program relies in large part on the high caliber of the juries convened each year to review submissions. The ASLA Honors and Awards Advisory Committee seeks to assemble juries that represent the breadth of the profession, including private, public, institutional, and academic practice, and exemplify diversity in professional experience, geography, gender, and ethnicity.</p>
